--- a/GrowUp/package.json
+++ b/GrowUp/package.json
@@ -13,6 +13,7 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-web": "^0.13.12",
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
