--- a/GrowUp/package.json
+++ b/GrowUp/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "react": "16.13.1",
@@ -23,10 +24,16 @@
     "babel-jest": "^26.3.0",
     "eslint": "^7.9.0",
     "jest": "^26.4.2",
+    "jest-expo": "^38.0.2",
+    "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "^0.63.0",
-    "react-test-renderer": "16.13.1"
+    "react-native-testing-library": "^6.0.0",
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "./setupTests.js"
+    ]
   }
 }
