--- a/GrowUp/package.json
+++ b/GrowUp/package.json
@@ -7,12 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "test": "jest"
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react-dom": "^16.13.1",
+    "react-native": "^0.63.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "^0.13.12",
     "uuidv4": "^6.2.3"
@@ -22,6 +22,8 @@
     "@babel/runtime": "^7.11.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^7.9.0",
     "jest": "^26.4.2",
     "jest-expo": "^38.0.2",
@@ -32,8 +34,23 @@
   },
   "jest": {
     "preset": "react-native",
+    "collectCoverage": true,
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
     "setupFiles": [
-      "./setupTests.js"
+      "<rootDir>/jest/setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native)"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/jest"
     ]
   }
 }
